Fixing squished sonya and patricia pages

--- a/less/main.less
+++ b/less/main.less
@@ -548,6 +548,7 @@ footer {
   color: white;
   display: flex;
   align-items: center;
+  min-height: 600px;
 
   h1 {
     text-align: center;
@@ -563,6 +564,7 @@ footer {
   color: white;
   display: flex;
   align-items: center;
+  min-height: 600px;
 
   h1 {
     text-align: center;
